[tool.poetry]
name = "cambio"
version = "0.1.0"
description = ""
authors = ["Penny Rowe <1795738+prowe12@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
plotly = "^5.11.0"
numpy = "^1.24.0"
pydantic = "^1.10.4"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
django-hint = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
